hphp/hack/test/typecheck/expr_dep_sub_option.php.legacy.exp
File "expr_dep_sub_option.php", line 14, characters 11-12:
Invalid argument (Typing[4110])
File "expr_dep_sub_option.php", line 9, characters 24-27:
This is the expression dependent type <expr#1>
File "expr_dep_sub_option.php", line 13, characters 8-9:
  where '<expr#1>' is a reference to this expression
File "expr_dep_sub_option.php", line 12, characters 15-15:
It is incompatible with an object of type C
File "expr_dep_sub_option.php", line 12, characters 15-15:
Since C is not final
File "expr_dep_sub_option.php", line 12, characters 15-15:
this might not be a C
